stack/synclounge/deployment-synclounge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synclounge
  labels:
    app: synclounge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synclounge
  template:
    metadata:
      labels:
        app: synclounge
    spec:
      nodeSelector:
        dfl.mn/datacentre: digitalocean
      containers:
        - name: synclounge
          image: starbix/synclounge:latest
          ports:
          - containerPort: 8088
          - containerPort: 8089
