stack/synclounge/ingress-synclounge.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: synclounge
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: issuer-cert-manager-production
    certmanager.k8s.io/cluster-issuer: issuer-cert-manager-production
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - sync.georgeflix.uk
    secretName: cert-synclounge
  rules:
  - host: sync.georgeflix.uk
    http:
      paths:
      - path: /slserver
        backend:
          serviceName: synclounge
          servicePort: 8089
      - path: /
        backend:
          serviceName: synclounge
          servicePort: 8088
